--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
     - log_default  #logging in default format
 #    - log_container  #logging in json format
 #    - xray # X-Ray Enabled
+  messages:
+    basename: messages,messages-fw-common,messages-fw-web
   jackson:
     property-naming-strategy: SNAKE_CASE
     # Resourceオブジェクトに存在しないフィールドがJSONに指定されていた場合、エラーとする
