--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -3,6 +3,10 @@ server:
 # Tomcat metrics enabled for Spring Cloud for AWS Micrometer CloudWatch Integration    
     mbeanregistry:
       enabled: true
+# Spring Cloud for AWS Parameter Store Integration & Secrets Manager Integration
+  config:
+    import: 
+      - optional:aws-parameterstore:/config/common/;/config/sample-backend/
 
 management:
   endpoints:
