--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,7 @@
         <spring-cloud.version>2025.0.0</spring-cloud.version>
         <spring-cloud-aws.version>3.4.0</spring-cloud-aws.version>
         <springdoc-openapi-ui.version>2.8.4</springdoc-openapi-ui.version>
-        <awssdk.bom.version>2.31.76</awssdk.bom.version>
-        <awsxray.bom.version>2.18.2</awsxray.bom.version>
+        <awsxray.bom.version>2.19.0</awsxray.bom.version>
         <terasoluna.version>5.10.0.RELEASE</terasoluna.version>
         <!-- logback-access -->
         <logback-access.version>2.0.6</logback-access.version>
@@ -30,7 +29,7 @@
         <org.mapstruct.version>1.6.3</org.mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <!-- DynamoDB Local -->
-        <dynamodb-local.version>2.6.1</dynamodb-local.version>
+        <dynamodb-local.version>3.0.0</dynamodb-local.version>
     </properties>
     <dependencies>
         <!-- Spring Boot Web -->
@@ -164,28 +163,14 @@
         </dependency>
         <!-- DynamoDB Local -->
         <dependency>
-            <groupId>com.amazonaws</groupId>
+            <groupId>software.amazon.dynamodb</groupId>
             <artifactId>DynamoDBLocal</artifactId>
             <version>${dynamodb-local.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.eclipse.jetty.toolchain</groupId>
-                    <artifactId>jetty-jakarta-servlet-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <!-- AWS X-Ray -->
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-xray-recorder-sdk-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-xray-recorder-sdk-aws-sdk</artifactId>
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
@@ -213,14 +198,6 @@
     </dependencies>
     <dependencyManagement>
         <dependencies>
-            <!-- AWS SDK -->
-            <dependency>
-                <groupId>software.amazon.awssdk</groupId>
-                <artifactId>bom</artifactId>
-                <version>${awssdk.bom.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
             <!-- AWS X-Ray -->
             <dependency>
                 <groupId>com.amazonaws</groupId>
